resources/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");

/* Global Styles */

:root {
	--dark-cyan: hsl(185, 75%, 39%);
	--very-dark-desaturated-blue: hsl(229, 23%, 23%);
	--dark-grayish-blue: hsl(227, 10%, 46%);
	--dark-gray: hsl(0, 0%, 59%);
}

*,
*::before,
*::after {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: "Kumbh Sans", sans-serif;
}

/* Mobile Layout */

body {
	position: relative;
	display: grid;
	place-items: center;
	min-height: 100vh;
	font-size: 1.125rem;
	background-color: var(--dark-cyan);
	z-index: -1;
	overflow: hidden;
}

body::before {
	top: 0;
	left: 0;
	background: url(../images/bg-pattern-top.svg) bottom right;
}

body::after {
	top: 100%;
	left: 100%;
	background: url(../images/bg-pattern-bottom.svg) top left;
}

body::before,
body::after {
	position: absolute;
	content: "";
	width: 100vw;
	height: 100vh;
	background-repeat: no-repeat;
	transform: translate(-50%, -50%);
	z-index: -1;
}

.container {
	position: relative;
	width: 20.3125rem;
	margin: 2rem auto;
	background-color: #fff;
	border-radius: 1rem;
	background-image: url(../images/bg-pattern-card.svg);
	background-position: top;
	background-repeat: repeat-x;
	box-shadow: 0.25rem 0.25rem 1rem rgba(12, 7, 7, 0.3);
}

.avatar-img {
	position: absolute;
	border-radius: 50%;
	border: 5px solid #fff;
	top: 5.5rem;
	left: 50%;
	transform: translateX(-50%);
}

.person-info {
	margin-top: 13.75rem;
	text-align: center;
}

.person-info h3 {
	color: var(--very-dark-desaturated-blue);
}

.first-section span {
	font-weight: normal;
	color: var(--dark-grayish-blue);
	font-size: 1.125rem;
	margin-left: 0.625rem;
}

.first-section p {
	color: var(--dark-grayish-blue);
	font-size: 0.875rem;
	margin: 1rem 0;
	padding-bottom: 1.5rem;
	border-bottom: 0.0625rem solid rgba(164, 164, 160, 0.25);
}

ul {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	margin: 2rem auto;
	width: 80%;
	list-style-type: none;
}

.primary {
	font-weight: bold;
	color: var(--very-dark-desaturated-blue);
	margin-bottom: 10px;
}

.secondary {
	font-size: 0.75rem;
	color: var(--dark-grayish-blue);
	letter-spacing: 0.0625rem;
}

.attribution {
	font-size: 0.75rem;
	margin-top: auto;
	padding-bottom: 0.5rem;
	text-align: center;
	color: #fff;
}

.attribution a {
	color: var(--very-dark-desaturated-blue);
	text-decoration: none;
	font-weight: bold;
}

.attribution a:hover {
	text-decoration: underline;
}

/* Mobile Layout (320w)*/

@media (max-width: 23.125rem) {
	.container {
		width: 16.5rem;
	}
}

/* Tablet Layout (560h) */

@media (min-height: 35rem) {
	.container {
		position: absolute;
		margin: 0;
	}
}

/* Desktop Layout (1024w) */

@media (min-width: 64rem) {
	.container {
		width: 21.875rem;
	}
}

